welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value &&
	if(10<=a && a<=20)&&(10<=b && b<=20){
                          ^